--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="facebook:description" content="Youtube" />
 		<meta name="facebook:app:country" content="US" />
 		<meta property="og:image" content="./image2.png" />
-		<meta property="og:title" content="Just happened an accident" />
+		<meta property="og:title" content="It's amazing what happened" />
 		<meta property="og:description" content="874, 835 views" />
 		<meta property="og:site_name" content="YouTube" />
 		<meta property="fb:app_id" content="87741124305" />
